--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/react": "^18.0.18",
     "autoprefixer": "10.4.2",
     "postcss": "8.4.5",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "typescript": "^4.8.2"
   }
 }
