--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.7.14",
     "@types/react": "^18.0.18",
     "autoprefixer": "10.4.2",
     "postcss": "8.4.5",
